# xpermLibraryLink

./: .gitignore  CMakeLists.txt  README.md  xpermLibraryLinkSample.nb
binaries/: libxpermLL.dylib
cmake/: FindWSTP.cmake  FindWolframLanguage.cmake  FindWolframLibrary.cmake
cmake/Wolfram/: Common.cmake
include/: LLInterface.hpp  xperm.h
src/: LLInterface.cpp  utils.c  xperm.c  xperm.cpp
